--- a/package.json
+++ b/package.json
@@ -15,12 +15,15 @@
     "nookies": "^2.5.2",
     "react": "^18",
     "react-dom": "^18",
-    "react-icons": "^5.2.1"
+    "react-icons": "^5.2.1",
+    "react-resizable": "^3.0.5",
+    "socket.io-client": "^4.7.5"
   },
   "devDependencies": {
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "@types/react-resizable": "^3.0.7",
     "eslint": "^8",
     "eslint-config-next": "14.2.3",
     "postcss": "^8",
